// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:UIKit:Accordion matches the snapshot when default as expanded 1`] = `
Array [
  <div>
    <span>
      Topic
    </span>
    <button
      onClick={[Function]}
    >
      click me
    </button>
  </div>,
  <div>
    <h1>
      Hello!
    </h1>
    <p>
      Welcome to the world of Jurassic Park
    </p>
  </div>,
]
`;

exports[`components:UIKit:Accordion matches the snapshot when default as not expanded 1`] = `
Array [
  <div>
    <span>
      Topic
    </span>
    <button
      onClick={[Function]}
    >
      click me
    </button>
  </div>,
  "",
]
`;
